# GoIT_Web_HomeWork_9

./: authors_bs4.json  authors_scrapy.json  main_bs4.py  main_scrapy.py  pyproject.toml
